Fix issues with spacing in projects flexbox with respect to cards by using flex-grow. Other visual changes as well.

--- a/screen.css
+++ b/screen.css
@@ -203,21 +203,23 @@ figcaption {
   width: 100%;
 }
 
-@supports (display: flex) {
-    #projects article {
-      display: flex;
-			background-color: #fff;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      align-items: flex-start;
-    }
+@supports (display: flex) { /* For projects page */
+  #projects article {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
 
-    #projects section {
-      background-color: #000;
-      width: 98vw;
-      margin: 1vw;
-    }
+  #projects section {
+    background-color: #333;
+    flex-grow: 1;
+    width: 51vw; /* All that matters is that it's more than 50, AKA can't fit 1 card */
+    margin: 1vw;
+    padding: 1vw;
+    border: 0;
+  }
 }
 
 @media screen and (min-width: 600px) {
@@ -231,9 +233,7 @@ figcaption {
 
   @supports (display: flex) {
     #projects section {
-      background-color: #000;
-      width: 45vw;
-      margin: 1vw;
+      width: 34vw; /* All that matters is that it's more than 33.33, AKA can't fit 2 cards */
     }
 }
 
@@ -295,11 +295,4 @@ figcaption {
       display: contents;
     }
   }
-
-  @supports (display: flex) {
-    #projects section {
-      background-color: #000;
-      width: 27vw;
-      margin: 0.5vw;
-    }
 }
